--- a/BookLoggerApp/Components/Pages/Settings.razor
+++ b/BookLoggerApp/Components/Pages/Settings.razor
@@ -1,5 +1,6 @@
 @page "/settings"
 @using BookLoggerApp.Core.ViewModels
+@implements IDisposable
 @inject SettingsViewModel ViewModel
 @inject BookLoggerApp.Core.Services.Abstractions.IBackButtonService BackButtonService
 
